room: Highlight message on special characters preceding nick

Since commit 2d06b9e, we have been highlighting messages
only if space proceed or non aplhanumeric character follow,
due to this mentions like @nick, #nick are not highlighted.
So instead of space, highlight if any non aplhanumeric
character follow.

https://bugzilla.gnome.org/show_bug.cgi?id=756761